#11 blur op omschrijving toegepast

--- a/views/index.liquid
+++ b/views/index.liquid
@@ -91,7 +91,8 @@
             <input id="check" type="checkbox">
             
             <h1 class="straat omschrijf">Omschrijving</h1>
-            <p>Onttrokken aan het zicht ligt deze verborgen parel op haar parkachtige domein van 4345m2. De bungalow ligt aan de Stationsweg, een van de bekendste..</p>
+            <p>Onttrokken aan het zicht ligt deze verborgen parel op haar parkachtige domein van 4345m2. De bungalow ligt aan de Stationsweg, een van de bekendste en markantste straten van Ede. Wanneer u door de elektrische poort het landgoed betreedt, komt u via de oprijlaan bij de levensloopbestendige bungalow.</p>
+            <p class="blur">De woning is de laatste jaren gerenoveerd en beschikt onder meer over een sfeervolle woonkamer met gashaard, luxe Siematic keuken met eetkamer, 5 slaapkamers, een souterrain en een heerlijke tuin rondom de woning met veel privacy.</p>
 
             <div class="content">
                 <p class="tekst-icons"> {{ huis.description }}</p>
