--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -201,6 +201,11 @@ a,
     padding-left: .5em;
 }
 
+.blur {
+    filter: blur( 1px); 
+    color: rgba(0, 0, 0, 0.5);
+ }
+
 .tekst-postcode {
     grid-column: 1/2;
     grid-row: 2/3;
